Kunde Create unbearbeitet

--- a/shop/src/main/webapp/auth/login.xhtml
+++ b/shop/src/main/webapp/auth/login.xhtml
@@ -41,7 +41,7 @@
 		<ui:param name="pageTitle" value="#{msg['login.title']}"/>
 	
 		<ui:define name="article">
-			<form id="loginForm" action="j_security_check" method="post">
+			<form id="loginForm" action="shop/auth/j_security_check" method="post">
 				Username
 				<input type="text" id="j_username" name="j_username"/>
 				Password
