createKunde (nicht funktionstüchtig -> controller..) und messages angepasst

--- a/shop/src/main/webapp/kundenverwaltung/createKunde.xhtml
+++ b/shop/src/main/webapp/kundenverwaltung/createKunde.xhtml
@@ -134,7 +134,7 @@
 						               for="password"
 						               value="#{msgKv['createPrivatkunde.password']}"/>
 						<h:inputSecret id="password"
-						               value="#{kc.neuerPrivatkunde.password}"
+						               value="#{kc.neuerKunde.password}"
 						               redisplay="true"/>
 						<f:verbatim/>
 						
