--- a/shop/src/main/webapp/artikelverwaltung/listArtikel.xhtml
+++ b/shop/src/main/webapp/artikelverwaltung/listArtikel.xhtml
@@ -28,10 +28,10 @@
 						                   minChars="1"
 						                   autocompleteMethod="#{ac.findArtikelByBezPrefix}"
 						                   var="artikel"
-						                   fetchValue="#{artikel.AId}">
+						                   fetchValue="#{artikel.bezeichnung}">
 						                <!--      converter="javax.faces.Number"
 						                   converterMessage="#{msgKv['viewKunde.kundenr.converterError']}">--> 
-							#{artikel.AId}: #{artikel.bezeichnung}
+								#{artikel.AId}: #{artikel.bezeichnung}
 						</rich:autocomplete>
 						<a4j:commandButton id="findButton"
 						                   action="#{ac.findArtikelByBezeichnung}"
