--- a/shop/src/main/webapp/kundenverwaltung/viewKunde.xhtml
+++ b/shop/src/main/webapp/kundenverwaltung/viewKunde.xhtml
@@ -123,8 +123,8 @@
 								<rich:column id="togglerSpalte" colspan="3">
 									<rich:collapsibleSubTableToggler id="subTableToggler"
 									                                 for="positionenSubtable"
-									                                 collapsedLabel="#{msgKv['viewKunde.bestellung']} #{bestellung.BId} : #{bestellung.getErzeugt('yyyy-MM-dd')}"
-									                                 expandedLabel="#{msgKv['viewKunde.bestellung']} #{bestellung.BId} : #{bestellung.getErzeugt('yyyy-MM-dd')}"/>
+									                                 collapsedLabel="#{msgKv['viewKunde.bestellung']} #{bestellung.BId} : #{bestellung.erzeugt}"
+									                                 expandedLabel="#{msgKv['viewKunde.bestellung']} #{bestellung.BId} : #{bestellung.erzeugt}"/>
 								</rich:column>
 								
 								<rich:collapsibleSubTable id="positionenSubtable"
