Warenkorb läuft bestellung abgeben läuft listArtikel noch nicht ganz

--- a/shop/src/main/webapp/bestellverwaltung/confirmBestellung.xhtml
+++ b/shop/src/main/webapp/bestellverwaltung/confirmBestellung.xhtml
@@ -24,7 +24,7 @@
 					<f:facet name="header">
 						#{msgBv['confirmBestellung.artikel.id']}
 					</f:facet>
-					#{pos.artikel.id}
+					#{pos.artikel.AId}
 				</rich:column>
 	
 				<rich:column id="bezeichnungSpalte">
