--- a/shop/src/main/webapp/bestellverwaltung/viewWarenkorb.xhtml
+++ b/shop/src/main/webapp/bestellverwaltung/viewWarenkorb.xhtml
@@ -27,7 +27,7 @@
 						<f:facet name="header">
 							#{msgBv['viewWarenkorb.artikel.id']}
 						</f:facet>
-						#{position.artikel.id}
+						#{position.artikel.AId}
 					</rich:column>
 					
 					<rich:column id="bezeichnungSpalte">
