--- a/shop/src/main/webapp/artikelverwaltung/selectArtikel.xhtml
+++ b/shop/src/main/webapp/artikelverwaltung/selectArtikel.xhtml
@@ -15,18 +15,25 @@
 		<ui:define name="article">
 			<h:form id="selectForm">
 				<h:panelGrid id="selectGrid" columns="2">
+				
+	
 					<rich:select id="artikelBezeichnung"
+								
 					             defaultLabel="#{msgAv['selectArtikel.auswahl']}"
-					             value="#{wk.artikelId}">
+					             value="#{wk.artikelId}" >
 						<!--
 						<f:selectItems id="artikelItems" values="#{verfuegbareArtikel}"/>
 						-->
+										<h:commandLink id="select" action="#{ac.selectArtikel}">
+											#{msgAv['menu.artikelverwaltung.artikelAuswahl']}
+										</h:commandLink>
 						<c:forEach var="artikel" items="#{verfuegbareArtikel}">
 							<f:selectItem id="artikelItem#{artikel.id}" itemLabel="#{artikel.bezeichnung}" itemValue="#{artikel.id}"/>
 						</c:forEach>
 					</rich:select>
 		
-					<h:commandButton id="selectButton"
+		
+				<h:commandButton id="selectButton"
 					                 action="#{wk.add}"
 					                 value="#{msgAv['selectArtikel.select']}"/>
 				</h:panelGrid>
