--- a/shop/src/main/webapp/artikelverwaltung/listArtikel.xhtml
+++ b/shop/src/main/webapp/artikelverwaltung/listArtikel.xhtml
@@ -117,7 +117,18 @@
 							             timing="domready"/>
 						</a4j:outputPanel>
 					</c:if>
-				</a4j:outputPanel>
+				
+				<p id="buttons">
+						<h:panelGroup id="buttonsGroup" rendered="#{not empty ac.artikel}">
+							<h:commandButton id="updateButtonArtikel"
+							                 image="#{resource['images:edit.gif']}"
+							                 action="/artikelverwaltung/updateArtikel"
+							                 alt="#{msgAv['viewArtikel.update.alt']}"/>
+							                 #{' '}
+							                 
+				</h:panelGroup>
+					</p>
+			</a4j:outputPanel>
 			</h:form>
 		</ui:define>
 	</ui:composition>
