Exception concurrentUpdate Artikel

--- a/shop/src/main/webapp/kundenverwaltung/createKunde.xhtml
+++ b/shop/src/main/webapp/kundenverwaltung/createKunde.xhtml
@@ -59,7 +59,7 @@
 						<f:verbatim/>
 			
 										
-						<h:outputLabel id="emailLabel" for="email" value="#{msgKv['createPrivatkunde.email']}"/>
+						<h:outputLabel id="emailLabel" for="email" value="#{msgKv['createKunde.email']}"/>
 						<h:inputText id="email" value="#{kc.neuerKunde.email}">
 							<rich:validator oninvalid="$(#{rich:element('email')}).addClass('invalid')"
                                             onvalid="$(#{rich:element('email')}).removeClass('invalid')"/>
