--- a/shop/src/main/webapp/index.xhtml
+++ b/shop/src/main/webapp/index.xhtml
@@ -2,7 +2,8 @@
 <!DOCTYPE html>
 
 <html xmlns="http://www.w3.org/1999/xhtml"
-	  xmlns:ui="http://java.sun.com/jsf/facelets">
+	  xmlns:ui="http://java.sun.com/jsf/facelets"
+	  xmlns:f="http://java.sun.com/jsf/core">
 	<ui:composition template="/WEB-INF/templates/desktop/main.xml">
 		<ui:define name="title">
 			#{msg['index.title']}
