--- a/shop/src/main/webapp/artikelverwaltung/createArtikel.xhtml
+++ b/shop/src/main/webapp/artikelverwaltung/createArtikel.xhtml
@@ -12,14 +12,18 @@
 			<f:event type="preRenderView" listener="#{ac.createEmptyArtikel}"/>
 		</ui:define>
 		
+		
+		
 		<ui:param name="pageTitle" value="#{msgAv['createArtikel.title']}"/>
 	
 		<ui:define name="article">
 			<h1>
 				#{msgAv['createArtikel.heading']}
 			</h1>
+			
+		<h:outputText value="#{msg['nichtBerechtigt']}" rendered="#{not rich:isUserInRole('admin')}"/>
 	
-			<h:form id="createArtikelForm">
+			<h:form id="createArtikelForm" rendered="#{rich:isUserInRole('admin')}">
 				<rich:jQuery id="nachnameFocus" selector="#nachname" query="focus()"/>
 				
 				<rich:graphValidator id="artikelValidator"
