--- a/shop/src/main/webapp/artikelverwaltung/updateArtikel.xhtml
+++ b/shop/src/main/webapp/artikelverwaltung/updateArtikel.xhtml
@@ -32,7 +32,8 @@
 			<span id="updateMessage"></span>
 			
 			<rich:messages id="fehlermeldungGobal" globalOnly="true"/>
-			<h:form id="updateArtikelForm" rendered="#{not empty ac.artikel}">
+			<h:outputText value="#{msg['nichtBerechtigt']}" rendered="#{not rich:isUserInRole('admin')}"/>
+			<h:form id="updateArtikelForm" rendered="#{not empty ac.artikel and rich:isUserInRole('admin') } " >
 				<rich:jQuery id="nachnameFocus" selector="#nachname" query="focus()"/>
 				<!--
 				<rich:focus id="formFocus"/>
