--- a/shop/src/main/webapp/bestellverwaltung/confirmBestellung.xhtml
+++ b/shop/src/main/webapp/bestellverwaltung/confirmBestellung.xhtml
@@ -13,8 +13,8 @@
 
 	<ui:define name="article">
 		<h1>#{msgBv['confirmBestellung.header']}</h1>
-		
-		<h:form id="bestellungForm">
+		<h:outputText value="#{msg['nichtBerechtigt']}" rendered="#{not rich:isUserInRole('admin')}"/>
+		<h:form id="bestellungForm" rendered="#{rich:isUserInRole('admin')}">
 			<rich:dataTable id="positionenTabelle"
 			                value="#{wk.positionen}"
 			                var="pos"
