upload funzt wieder

--- a/shop/src/main/webapp/kundenverwaltung/upload.xhtml
+++ b/shop/src/main/webapp/kundenverwaltung/upload.xhtml
@@ -15,7 +15,7 @@
 			
 			<h:outputText value="#{msg['nichtBerechtigt']}" rendered="#{not rich:isUserInRole('admin')}"/>
 			
-			<h:form id="uploadForm" rendered="rich:isUserInRole('admin')">
+			<h:form id="uploadForm" rendered="#{rich:isUserInRole('admin')}">
 				<rich:focus id="uploadFormFocus"/>
 				
 				<h:panelGrid id="uploadFormGrid" columns="2">
